--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "passport": "*",
     "passport-google-oauth": "*",
     "connect-restreamer": "*",
-    "xml2js": "*"
+    "xml2js": "*",
+    "lodash": "^2.4.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "bugs": {
     "url": "https://github.com/fangli/kibana-authentication-proxy/issues"
   }
