--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "copyright": "Funplus Game",
   "dependencies": {
-    "express": "3.*",
+    "express": "3.5.2",
     "passport": "*",
     "passport-google-oauth": "*",
     "connect-restreamer": "*",
